@@ -1,3 +1,7 @@
+Dec 01, 2020: libarchive 3.5.0 released
+
+Oct 14, 2020: Support for system extended attributes
+
 May 20, 2020: libarchive 3.4.3 released
 
 Apr 30, 2020: Support for pzstd compressed files
